--- a/css/book.css
+++ b/css/book.css
@@ -2784,7 +2784,7 @@ body.fixed {
     background: #ac3b3b;
 }
 .bg-2{
-    background: #1d6881;
+    background: #f7aa45;
 }
 .bg-3{
     background: #092f3b;
@@ -2812,7 +2812,49 @@ body.fixed {
     font-weight: 800;
 }
 
+.pt-15 {
+    padding-top: 15px; 
+}
+.pt-50 {
+    padding-top: 50px; 
+}
 
+.mt-0{
+    margin-top: 0px;
+}
+.mt-5{
+    margin-top: 5px;
+}
+.mt-10{
+    margin-top: 10px;
+}
+.mt-15{
+    margin-top: 15px;
+}
+.mt-20{
+    margin-top: 20px;
+}
+.mt-25{
+    margin-top: 25px;
+}
+.mt-30{
+    margin-top: 30px;
+}
+.mt-35{
+    margin-top: 35px;
+}
+.mt-40{
+    margin-top: 40px;
+}
+.mt-50{
+    margin-top: 50px;
+}
+.mt-60{
+    margin-top: 60px;
+}
+.mt-70{
+    margin-top: 70px;
+}
 
 .mt-100 {
     margin-top: 100px;
@@ -2868,10 +2910,6 @@ section .title-msg{
     text-align: center;
 }
 
-img {
-    height: 200px; 
-    width: 200px; 
-}
 
 .wrap-contents section p {
     margin: 25px 15px 35px 15px;
@@ -2904,4 +2942,43 @@ img {
 .fade-in-Vis {
     opacity: 1;
     transition: all 1.5s;
+}
+
+.strong-underline{
+    line-height: 1.5;
+    background: linear-gradient(0deg,#0d724d 40%,transparent 40%);
+    padding: 0 10px 2px;
+}
+.empty-star, .painted-star{
+    padding:5px
+}
+.display-none{
+    display: none;
+}
+
+.fc-white{
+    color: white;
+}
+
+textarea{
+    display: block;
+    padding: 10px;
+    width: 100%;
+    height: 100px;
+    box-sizing: border-box;
+    font-family: inherit;
+    font-size: 15px;
+    line-height: 1.4;
+    border: none;
+    border-radius: 8px;
+}
+button{
+    border: none;
+    font-family: inherit;
+    display: block;
+    width: 100%;
+    font-size:inherit;
+    line-height: 1.5;
+    border-radius: 5px;
+    height: 40px;
 }
