--- a/css/book.css
+++ b/css/book.css
@@ -2901,6 +2901,7 @@ section .title-msg{
     padding: 0px 10px 10px 0px; 
     width: 200px; 
     height: 200px;
+    display: inline-block;
 }
 .text-align-right{
     text-align: right;
