--- a/css/book.css
+++ b/css/book.css
@@ -3012,8 +3012,19 @@ button{
     height: 40px;
 }
 
-
-
 .scroll-active {
     background-color: red;
+}
+
+.scrolled {
+    animation: 1s ease-in-out 1s infinite alternate scrolled-right;
+}
+
+@keyframes scrolled-right {
+    from {
+        left: 10px;
+    } 
+    to {
+        left: 300px; 
+    }
 }
